--- a/index.html
+++ b/index.html
@@ -15,22 +15,30 @@
   </style>
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+  <div class="container">
+    <main>
+      <h1>Learn to code by watching others</h1>
+      <p>
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+      </p>
+    </main>
+  </div>
+  <div class="register">
+    <div class="scheme">
+      <strong>Try it free 7 days</strong> then $20/mo. thereafter
+    </div>
+    <form>
+      <input type="text" placeholder="First Name ">
+      <input type="text" placeholder="Last Name">
+      <input type="text" placeholder="Email Address">
+      <input type="text" placeholder="Password">
+      <button type="submit">Claim your free trial</button>
+      <p class="terms">
+        By clicking the button, you are agreeing to our <a href="#">Terms and Services</a>
+      </p>
+    </form>
+  </div>
   
   <footer>
     <p class="attribution">
