--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="container">
     <main>
-      <h1>Learn to code by watching others</h1>
-      <p>
+      <h1 class="title">Learn to code by watching others</h1>
+      <p class="description">
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
       </p>
