--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
       </div>
       <form>
-        <input type="text" placeholder="First Name ">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Email Address">
-        <input type="text" placeholder="Password">
+        <input type="text" name="name" placeholder="First Name">
+        <input type="text" name="lastName" placeholder="Last Name">
+        <input type="email" name="email" placeholder="Email Address">
+        <input type="password" name="password" placeholder="Password">
         <button type="submit">Claim your free trial</button>
         <p class="terms">
           By clicking the button, you are agreeing to our <a href="#">Terms and Services</a>
