--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
   <div class="container">
-    <main>
+    <header>
       <h1 class="title">Learn to code by watching others</h1>
       <p class="description">
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
       </p>
-    </main>
+    </header>
     <div class="register">
       <div class="scheme">
         <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
